--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,22 @@
 #######################################
+### Profile
+#######################################
+
+spring.profiles.active=dev
+
+
+#######################################
 ### Database
 #######################################
+spring.jpa.database=postgresql
+
+# Platform to use in the DDL or DML scripts
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/storio
+
+# Default values. Change if needed
+spring.datasource.username=postgres
+spring.datasource.password=admin
 
 # For database first development. Validates the existing database schema,
 # so that JPA won't create any new tables / properties
@@ -13,3 +29,4 @@ spring.jpa.hibernate.ddl-auto=validate
 
 # Run server on the specific port
 server.port=9999
+
