--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.datasource.password=admin
 # For database first development. Validates the existing database schema,
 # so that JPA won't create any new tables / properties
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 
 #######################################
