Initial controllers commit

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -34,3 +34,7 @@ spring.jpa.open-in-view=false
 # Run server on the specific port
 server.port=9999
 
+#######################################
+### Spring configuration
+#######################################
+spring.banner.location=classpath:banner/main-banner.txt
