--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,9 +23,6 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-# Disable OSIV to increase the performance
-spring.jpa.open-in-view=false
-
 
 #######################################
 ### Server
@@ -34,3 +31,7 @@ spring.jpa.open-in-view=false
 # Run server on the specific port
 server.port=9999
 
+#######################################
+### Spring configuration
+#######################################
+spring.banner.location=classpath:banner/main-banner.txt
