Connect login on backend and frontend side

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,3 +35,8 @@ server.port=9999
 ### Spring configuration
 #######################################
 spring.banner.location=classpath:banner/main-banner.txt
+
+#######################################
+### Auth0 settings
+#######################################
+# auth0.secret-key=<YOUR_SECRET_KEY>
