--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -23,6 +23,8 @@
     "no-eval": "error",
     "import/first": "error",
     "import/extension": "off",
-    "@typescript-eslint/no-unsafe-assignment": "off"
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
