--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/redux-saga-routines": "^3.1.1",
     "eslint-config-airbnb": "^18.2.1",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -21,6 +23,7 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "redux-saga-routines": "^3.2.3",
     "sass": "^1.32.8",
     "web-vitals": "^1.0.1"
   },
