Fetch real data from the server

--- a/frontend/tsconfig.paths.json
+++ b/frontend/tsconfig.paths.json
@@ -20,6 +20,9 @@
       "@helpers/*": [
         "helpers/*"
       ],
+      "@routines/*": [
+        "routines/*"
+      ],
       "@root/*": [
         "./*"
       ]
