--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.16",
+    "@types/react-redux-toastr": "^7.6.0",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/parser": "^4.16.1",
     "craco-alias": "^2.2.0",
