--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/redux-saga-routines": "^3.1.1",
     "eslint-config-airbnb": "^18.2.1",
+    "moment": "^2.29.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
